# market-watch

./: .gitignore  README.md  pipeline.py  pyproject.toml  run_pipeline.py
app/core/: config.py  logging.py
app/database/: connection.py  init_database.py
app/models/: entity.py  exchange_rate.py  scraped_record.py
app/repositories/: entity_repository.py  rate_repository.py
app/scrapers/: bnr_scraper.py  driver.py  valutare_scraper.py
app/services/: entity_service.py  pipeline_service.py  rate_service.py
database/: db.py  entity_service.py  exchange_rates.db  init_database.py  query.py  rate_service.py  schema.sql
scrapers/: bnr_scraper.py  valutare_scraper.py
scrappers/: bnr_scrapper.py  valutare_scrapper.py
scripts/: query_rates.py  run_pipeline.py
